<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startScreen"
    >

    <fragment
        android:id="@+id/startScreen"
        android:name="dev.esnault.bunpyro.android.screen.start.StartFragment"
        tools:layout="@layout/fragment_start"
        >

        <action
            android:id="@+id/action_start_to_apiKey"
            app:destination="@id/apiKeyScreen"
            app:popUpTo="@+id/startScreen"
            app:popUpToInclusive="true"
            />

        <action
            android:id="@+id/action_start_to_firstSync"
            app:destination="@id/firstSyncScreen"
            app:popUpTo="@+id/startScreen"
            app:popUpToInclusive="true"
            />

        <action
            android:id="@+id/action_start_to_home"
            app:destination="@id/homeScreen"
            app:popUpTo="@+id/startScreen"
            app:popUpToInclusive="true"
            />

    </fragment>

    <fragment
        android:id="@+id/apiKeyScreen"
        android:name="dev.esnault.bunpyro.android.screen.apikey.ApiKeyFragment"
        tools:layout="@layout/fragment_api_key"
        >

        <action
            android:id="@+id/action_apiKey_to_firstSync"
            app:destination="@id/firstSyncScreen"
            app:popUpTo="@+id/apiKeyScreen"
            app:popUpToInclusive="true"
            />

    </fragment>

    <fragment
        android:id="@+id/firstSyncScreen"
        android:name="dev.esnault.bunpyro.android.screen.firstsync.FirstSyncFragment"
        tools:layout="@layout/fragment_first_sync"
        >

        <action
            android:id="@+id/action_firstSync_to_home"
            app:destination="@id/homeScreen"
            app:popUpTo="@+id/firstSyncScreen"
            app:popUpToInclusive="true"
            />

    </fragment>

    <fragment
        android:id="@+id/homeScreen"
        android:name="dev.esnault.bunpyro.android.screen.home.HomeFragment"
        tools:layout="@layout/fragment_home"
        >

        <action
            android:id="@+id/action_home_to_lessons"
            app:destination="@id/lessonsScreen"
            />

        <action
            android:id="@+id/action_home_to_all_grammar"
            app:destination="@id/allGrammarScreen"
            />

        <action
            android:id="@+id/action_home_to_grammarPoint"
            app:destination="@id/grammarPointScreen"
            />

        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@id/settingsScreen"
            />

        <action
            android:id="@+id/action_home_to_review"
            app:destination="@id/reviewScreen"
            />

    </fragment>

    <fragment
        android:id="@+id/lessonsScreen"
        android:name="dev.esnault.bunpyro.android.screen.lessons.LessonsFragment"
        tools:layout="@layout/fragment_lessons"
        >

        <action
            android:id="@+id/action_lessons_to_grammarPoint"
            app:destination="@id/grammarPointScreen"
            />

    </fragment>

    <fragment
        android:id="@+id/grammarPointScreen"
        android:name="dev.esnault.bunpyro.android.screen.grammarpoint.GrammarPointFragment"
        tools:layout="@layout/fragment_grammar_point"
        >

        <argument
            android:name="id"
            app:argType="long"
            />

        <argument
            android:name="readOnly"
            android:defaultValue="false"
            app:argType="boolean"
            />

        <action
            android:id="@+id/action_grammarPoint_to_grammarPoint"
            app:destination="@id/grammarPointScreen"
            />

        <action
            android:id="@+id/action_grammarPoint_to_subscription"
            app:destination="@id/subscriptionScreen"
            />

    </fragment>

    <fragment
        android:id="@+id/allGrammarScreen"
        android:name="dev.esnault.bunpyro.android.screen.allgrammar.AllGrammarFragment"
        tools:layout="@layout/fragment_all_grammar"
        >

        <action
            android:id="@+id/action_allGrammar_to_grammarPoint"
            app:destination="@id/grammarPointScreen"
            />

    </fragment>

    <fragment
        android:id="@+id/settingsScreen"
        android:name="dev.esnault.bunpyro.android.screen.settings.SettingsFragment"
        tools:layout="@layout/fragment_settings"
        >

        <action
            android:id="@+id/action_settings_to_settingsDisplay"
            app:destination="@id/settingsDisplayScreen"
            />

        <action
            android:id="@+id/action_settings_to_settingsReview"
            app:destination="@id/settingsReviewScreen"
            />

        <action
            android:id="@+id/action_settings_to_settingsNotifications"
            app:destination="@id/settingsNotificationsScreen"
            />

        <action
            android:id="@+id/action_settings_to_settingsUser"
            app:destination="@id/settingsUserScreen"
            />

        <action
            android:id="@+id/action_settings_to_settingsLicenses"
            app:destination="@id/settingsLicensesScreen"
            />

        <action
            android:id="@+id/action_settings_to_settingsAbout"
            app:destination="@id/settingsAboutScreen"
            />

        <action
            android:id="@+id/action_settings_to_settingsDebug"
            app:destination="@id/settingsDebugScreen"
            />

        <action
            android:id="@+id/action_settings_to_apiKey"
            app:destination="@id/apiKeyScreen"
            app:popUpTo="@+id/homeScreen"
            app:popUpToInclusive="true"
            />

    </fragment>

    <fragment
        android:id="@+id/settingsLicensesScreen"
        android:name="dev.esnault.bunpyro.android.screen.settings.licenses.SettingsLicensesFragment"
        />

    <fragment
        android:id="@+id/settingsAboutScreen"
        android:name="dev.esnault.bunpyro.android.screen.settings.about.SettingsAboutFragment"
        />

    <fragment
        android:id="@+id/settingsReviewScreen"
        android:name="dev.esnault.bunpyro.android.screen.settings.review.SettingsReviewFragment"
        tools:layout="@layout/fragment_settings"
        />

    <fragment
        android:id="@+id/subscriptionScreen"
        android:name="dev.esnault.bunpyro.android.screen.settings.subscription.SubscriptionFragment"
        />

    <fragment
        android:id="@+id/settingsDebugScreen"
        android:name="dev.esnault.bunpyro.android.screen.settings.debug.SettingsDebugFragment"
        tools:layout="@layout/fragment_settings"
        />

    <fragment
        android:id="@+id/settingsDisplayScreen"
        android:name="dev.esnault.bunpyro.android.screen.settings.display.SettingsDisplayFragment"
        tools:layout="@layout/fragment_settings"
        />

    <fragment
        android:id="@+id/settingsUserScreen"
        android:name="dev.esnault.bunpyro.android.screen.settings.user.SettingsUserFragment"
        tools:layout="@layout/fragment_settings"
        >

        <action
            android:id="@+id/action_settingsUser_to_subscription"
            app:destination="@id/subscriptionScreen"
            />

    </fragment>

    <fragment
        android:id="@+id/settingsNotificationsScreen"
        android:name="dev.esnault.bunpyro.android.screen.settings.notifications.SettingsNotificationsFragment"
        tools:layout="@layout/fragment_settings"
        />

    <fragment
        android:id="@+id/reviewScreen"
        android:name="dev.esnault.bunpyro.android.screen.review.ReviewFragment"
        tools:layout="@layout/fragment_review"
        >
        <action
            android:id="@+id/action_review_to_grammarPoint"
            app:destination="@id/grammarPointScreen"
            />

        <action
            android:id="@+id/action_review_to_subscription"
            app:destination="@id/subscriptionScreen"
            />
    </fragment>

</navigation>
