...
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/apikey_hint"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/apikey_save"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apikey_intro_title"
        app:layout_constraintWidth_max="@dimen/text_max_width"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apikey_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />

...
